--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "create-app": "node ./index.js"
   },
   "bin": {
-    "create-redux-app": "node ./index.js"
+    "create-redux-app": "./index.js"
   },
   "author": "Liam Hanrahan",
   "license": "ISC",
