--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "chalk": "^2.4.2",
+    "commander": "^2.19.0",
     "cross-spawn": "^6.0.5",
     "envinfo": "^7.1.0"
   }
